###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###########################################################################
bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.39.0",
)

bazel_dep(name = "io_periph_x_conn_v3", version = "3.7.2")

archive_override(
    module_name = "io_periph_x_conn_v3",
    urls = ["https://github.com/periph/conn/archive/refs/tags/v3.7.2.tar.gz"],
    sha256 = "300ad3666893099dab723c26646cc11ba991ef1b1326feb89e09c06f5536b835",
    # Optional: if the archive extracts to a subdirectory that is not the module root
    # strip_prefix = "my_unregistered_module-1.0",
    # Optional: if the MODULE.bazel file is in a subdirectory within the archive after stripping prefix
    # subpath = "path/to/module/root/within/archive",
)